--- a/environment.yaml
+++ b/environment.yaml
@@ -1,11 +1,14 @@
-name: my-template-environment
+name: chat-with-your-database
 channels:
   - conda-forge
   - defaults
+  - jupyter
 dependencies:
   - python=3.9
   - pip
+  - ipykernel
+  - poppler
   - pip:
     - -r requirements.txt
     - -r requirements-codequality.txt
-    - -r requirements-pipelines.txt
+
