--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,25 @@
-# Your Azure Speech Service subscription key
-SPEECH_KEY=<YOUR AZURE SPEECH SERVICE SUBSCRIPTION KEY>
+# Required: Azure AI Search Service Configuration
+AZURE_AI_SEARCH_SERVICE_ENDPOINT=""
+AZURE_SEARCH_ADMIN_KEY=""
+AZURE_SEARCH_INDEX_NAME_DOCUMENTS=""
+AZURE_SEARCH_INDEX_NAME_IMAGES_AND_AUDIO=""
 
-# Your Azure Speech Service region
-SPEECH_REGION=<YOUR AZURE SPEECH SERVICE REGION>
+# Required: Azure Open API Configuration
+AZURE_AOAI_API_KEY=''
+AZURE_AOAI_API_ENDPOINT=''
+AZURE_AOAI_EMBEDDING_DEPLOYMENT_ID=''
+AZURE_AOAI_API_VERSION=''
 
-# Your Azure Machine Learning workspace key
-INTENT_KEY=<YOUR AZURE MACHINE LEARNING WORKSPACE KEY>
+# Required IF interacting with Blob Storage: Azure Storage Configuration
+AZURE_STORAGE_CONNECTION_STRING=''
 
-# Your Azure OpenAI API key
-OPENAI_KEY=<YOUR AZURE OPENAI API KEY>
+# Required IF interacting with SharePoint through Graph API: Microsoft Entra ID Configuration
+TENANT_ID=''
+CLIENT_ID=''
+CLIENT_SECRET=''
+SITE_DOMAIN=''
+SITE_NAME=''
+
+# REQUIRED IF APPLYING OCR: Azure Document Intelligence API Configuration
+AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT=""
+AZURE_DOCUMENT_INTELLIGENCE_KEY=""
