--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ pandas
 seaborn
 pyarrow
 backoff
+promptflow 
+promptflow-tools
+pyodbc
+azure-identity
+azure-search-documents==11.4.0
+azure-storage-blob
